--- a/appIonic/src/app/pages/clientes/clientes.page.html
+++ b/appIonic/src/app/pages/clientes/clientes.page.html
@@ -4,10 +4,31 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">clientes</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col class="headerTable" size="1"></ion-col>
+      <ion-col class="headerTable" size="2">Nome</ion-col>
+      <ion-col class="headerTable" size="2">Telefone</ion-col>
+      <ion-col class="headerTable" size="2">Último Pedido</ion-col>
+      <ion-col class="headerTable" size="4"></ion-col>
+    </ion-row>
+
+    <ion-row *ngFor="let cliente of clientes">
+      <ion-col size="1">{{ cliente.id }}</ion-col>
+      <ion-col size="2">{{ cliente.nome }}</ion-col>
+      <ion-col size="2">{{ cliente.telefone }}</ion-col>
+      <ion-col size="2">{{ cliente.pedido }}</ion-col>
+      <ion-col size="4">
+        <ion-button (click)="editarCliente()">
+          <ion-icon name="create"></ion-icon>
+          Editar
+        </ion-button>
+        <ion-button (click)="apagarCliente()">
+          <ion-icon name="trash"></ion-icon>
+          Apagar
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
